# japan-stock-mcp

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
app/: db.py  pyproject.toml  server.py
app/tools/: annual_report.py  batch_trigger.py  financials.py  metadata.py  screener.py
batch/: Dockerfile  backup.py  edinet.py  gen_db_status.py  init_db.py  jquants_fetcher.py  price_fetcher.py  pyproject.toml  quarterly_fetcher.py  run.py  sync_runner.py  xbrl_parser.py
batch/migrations/: 001_initial.sql  002_fix_quarter_uniqueness.sql  003_add_source_to_financials.sql  004_cleanup_yfinance_quarterly.sql
docs/: Japan_stock_mcp_design.md  implementation_plan.md
docs/claude/: architecture.md  constraints.md  data-model.md
skills/: README.md
skills/stock-analysis/: SKILL.md
