[project]
name = "japan-stock-mcp-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "anyio>=4.0.0",
    "pymupdf>=1.24.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "db"]
packages = ["tools"]
