[project]
name = "japan-stock-mcp-batch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "boto3>=1.34.0",
    "jquants-api-client>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
